Cleanup code for RenderMathMLUnderOver::layoutBlock https://bugs.webkit.org/show_bug.cgi?id=179681

Patch by Minsheng Liu <lambda@liu.ms> on 2017-11-26
Reviewed by Frédéric Wang.

The patch removes some unnecessary calls to layoutIfNeeds() and guards the change
with assertion. Since there is no behavior change, no new tests are required.

* rendering/mathml/RenderMathMLUnderOver.cpp:
(WebCore::RenderMathMLUnderOver::stretchHorizontalOperatorsAndLayoutChildren):
(WebCore::RenderMathMLUnderOver::layoutBlock):
(WebCore::RenderMathMLUnderOver::computeOperatorsHorizontalStretch): Deleted.
* rendering/mathml/RenderMathMLUnderOver.h:

Canonical link: https://commits.webkit.org/196016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225148 268f45cc-cd09-0410-ab3c-d52691b4dbfc